--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <p><strong>Tech:</strong> Python, FastAPI, Streamlit, Scikit-learn</p>
         <a href="https://github.com/yourusername/wine-quality-prediction">GitHub Repository</a>
     </div>
-
+   #dssd
     <div class="card">
         <h3>Neural Network Basics</h3>
         <img src="project2.png" alt="Neural Network Project" class="project-img" />
