--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 </nav>
 
 <header>
-    <h1>Your Name</h1>
+    <h1><Sidharth class="R"></Sidharth></h1>
     <p>Aspiring Software & Machine Learning Developer</p>
 </header>
 
@@ -188,15 +188,6 @@
         <p><strong>Tech:</strong> Python, FastAPI, Streamlit, Scikit-learn</p>
         <a href="https://github.com/yourusername/wine-quality-prediction">GitHub Repository</a>
     </div>
-   #dssd
-    <div class="card">
-        <h3>Neural Network Basics</h3>
-        <img src="project2.png" alt="Neural Network Project" class="project-img" />
-        <p>Beginner neural network project to understand layers, weights, and training.</p>
-        <p><strong>Tech:</strong> Python, NumPy</p>
-        <a href="https://github.com/yourusername/neural-network-basics">GitHub Repository</a>
-    </div>
-</section>
 
 <section id="skills">
     <h2>Technical Skills</h2>
@@ -222,9 +213,9 @@
 <section id="contact">
     <h2>Contact</h2>
     <div class="card">
-        <p>Email: <a href="mailto:yourname@email.com">yourname@email.com</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></p>
-        <p>GitHub: <a href="https://github.com/yourusername">github.com/yourusername</a></p>
+        <p>Email: <a href="sidharthsivacochin@gmail.com">yourname@email.com</a></p>
+        <p>LinkedIn: <a href="www.linkedin.com/in/sidharth-rampadath-68ab27380">linkedin.com/in/yourprofile</a></p>
+        <p>GitHub: <a href="https://github.com/Sidharth-in-git">github.com/yourusername</a></p>
         <p>Resume: <a href="https://drive.google.com/your-resume-link">Download CV</a></p>
     </div>
 </section>
