--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
 <section id="education">
     <h2>Education</h2>
     <div class="card">
-        <p><strong>Course:</strong> Your Course Name</p>
-        <p><strong>Institution:</strong> Your College / School</p>
-        <p><strong>Year:</strong> Year – Present</p>
+        <p><strong>Course:</strong> AI/ML</p>
+        <p><strong>Institution:</strong> SDPY GHSS</p>
+        <p><strong>Year:</strong> 2022 – 2024</p>
     </div>
 </section>
 
