--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 </nav>
 
 <header>
-    <h1><Sidharth class="R"></Sidharth></h1>
+    <h1>Sidharth.r</h1>
     <p>Aspiring Software & Machine Learning Developer</p>
 </header>
 
