updated linked.in link

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <h2>Contact</h2>
     <div class="card">
         <p>Email: <a href="mailto:yourname@email.com">sidharthsivacochin@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">www.linkedin.com/in/sidharth-rampadath-68ab27380</a></p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">https://www.linkedin.com/in/sidharth-rampadath-68ab27380/</a></p>
         <p>GitHub: <a href="https://github.com/yourusername">https://github.com/Sidharth-in-git</a></p>
         <p>Resume: <a href="https://drive.google.com/your-resume-link">Download CV</a></p>
     </div>
