--- a/index.html
+++ b/index.html
@@ -1,242 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
-
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
-
-        body {
-            background-color: #f4f6f8;
-            color: #333;
-            line-height: 1.6;
-            transition: background 0.3s, color 0.3s;
-        }
-
-        body.dark {
-            background-color: #0f172a;
-            color: #e5e7eb;
-        }
-
-        nav {
-            position: sticky;
-            top: 0;
-            background: #1f2933;
-            padding: 15px 20px;
-            z-index: 1000;
-        }
-
-        nav ul {
-            list-style: none;
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            flex-wrap: wrap;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-
-        .toggle {
-            position: absolute;
-            right: 20px;
-            top: 15px;
-            background: #2563eb;
-            color: #fff;
-            border: none;
-            padding: 6px 10px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        header {
-            background: linear-gradient(135deg, #1f2933, #111827);
-            color: #fff;
-            padding: 80px 20px;
-            text-align: center;
-        }
-
-        header h1 {
-            font-size: 2.8rem;
-            animation: fadeIn 1s ease-in;
-        }
-
-        header p {
-            margin-top: 10px;
-            font-size: 1.2rem;
-            color: #cbd5e1;
-        }
-
-        section {
-            padding: 60px 20px;
-            max-width: 1000px;
-            margin: auto;
-            animation: slideUp 0.8s ease;
-        }
-
-        h2 {
-            margin-bottom: 25px;
-            border-bottom: 2px solid #e5e7eb;
-            display: inline-block;
-            padding-bottom: 6px;
-        }
-
-        .card {
-            background: #fff;
-            padding: 20px;
-            margin-bottom: 25px;
-            border-radius: 10px;
-            box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-            transition: transform 0.3s;
-        }
-
-        body.dark .card {
-            background: #1e293b;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-        }
-
-        .project-img {
-            width: 100%;
-            border-radius: 8px;
-            margin: 10px 0;
-        }
-
-        ul {
-            padding-left: 20px;
-        }
-
-        a {
-            color: #2563eb;
-        }
-
-        footer {
-            background: #1f2933;
-            color: #cbd5e1;
-            text-align: center;
-            padding: 25px;
-            margin-top: 40px;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        @keyframes slideUp {
-            from { transform: translateY(20px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
-        }
-
-        @media (max-width: 600px) {
-            header h1 { font-size: 2.2rem; }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-
-<nav>
-    <button class="toggle" onclick="toggleMode()">Dark Mode</button>
-    <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-</nav>
-
-<header>
-    <h1>Sidharth.R</h1>
-    <p>Aspiring Software & Machine Learning Developer</p>
-</header>
-
-<section id="about">
-    <h2>About Me</h2>
-    <div class="card">
-        <p>I am a motivated student interested in software development, machine learning, and web technologies. I enjoy building real-world projects and continuously improving my skills.</p>
-    </div>
-</section>
-
-<section id="projects">
-    <h2>Projects</h2>
-
-    <div class="card">
-        <h3>Wine Quality Prediction</h3>
-        <img src="project1.png" alt="Wine Quality Project" class="project-img" />
-        <p>ML-based application that predicts wine quality using chemical properties.</p>
-        <p><strong>Tech:</strong> Python, FastAPI, Streamlit, Scikit-learn</p>
-        <a href="https://github.com/yourusername/wine-quality-prediction">GitHub Repository</a>
-    </div>
-   #dssd
-    <div class="card">
-        <h3>Neural Network Basics</h3>
-        <img src="project2.png" alt="Neural Network Project" class="project-img" />
-        <p>Beginner neural network project to understand layers, weights, and training.</p>
-        <p><strong>Tech:</strong> Python, NumPy</p>
-        <a href="https://github.com/yourusername/neural-network-basics">GitHub Repository</a>
-    </div>
-</section>
-
-<section id="skills">
-    <h2>Technical Skills</h2>
-    <div class="card">
-        <ul>
-            <li>Python, JavaScript, Dart (Basic)</li>
-            <li>HTML, CSS, FastAPI, Streamlit</li>
-            <li>Machine Learning, Neural Networks (Basics)</li>
-            <li>Git, GitHub, VS Code</li>
-        </ul>
-    </div>
-</section>
-
-<section id="education">
-    <h2>Education</h2>
-    <div class="card">
-        <p><strong>Course:</strong> AI/ML</p>
-        <p><strong>Institution:</strong> SDPY GHSS</p>
-        <p><strong>Year:</strong> 2022 – 2024</p>
-    </div>
-</section>
-
-<section id="contact">
-    <h2>Contact</h2>
-    <div class="card">
-        <p>Email: <a href="mailto:yourname@email.com">sidharthsivacochin@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">https://www.linkedin.com/in/sidharth-rampadath-68ab27380/</a></p>
-        <p>GitHub: <a href="https://github.com/yourusername">https://github.com/Sidharth-in-git</a></p>
-        <p>Resume: <a href="https://drive.google.com/your-resume-link">Download CV</a></p>
-    </div>
-</section>
-
-<footer>
-    <p>© 2025 Sidharth | Portfolio</p>
-</footer>
-
-<script>
-    function toggleMode() {
-        document.body.classList.toggle('dark');
+  <!-- Section: Design Block -->
+<section class="background-radial-gradient overflow-hidden">
+  <style>
+    .background-radial-gradient {
+      background-color: hsl(218, 41%, 15%);
+      background-image: radial-gradient(650px circle at 0% 0%,
+          hsl(218, 41%, 35%) 15%,
+          hsl(218, 41%, 30%) 35%,
+          hsl(218, 41%, 20%) 75%,
+          hsl(218, 41%, 19%) 80%,
+          transparent 100%),
+        radial-gradient(1250px circle at 100% 100%,
+          hsl(218, 41%, 45%) 15%,
+          hsl(218, 41%, 30%) 35%,
+          hsl(218, 41%, 20%) 75%,
+          hsl(218, 41%, 19%) 80%,
+          transparent 100%);
     }
+
+    #radius-shape-1 {
+      height: 220px;
+      width: 220px;
+      top: -60px;
+      left: -130px;
+      background: radial-gradient(#44006b, #ad1fff);
+      overflow: hidden;
+    }
+
+    #radius-shape-2 {
+      border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
+      bottom: -60px;
+      right: -110px;
+      width: 300px;
+      height: 300px;
+      background: radial-gradient(#44006b, #ad1fff);
+      overflow: hidden;
+    }
+
+    .bg-glass {
+      background-color: hsla(0, 0%, 100%, 0.9) !important;
+      backdrop-filter: saturate(200%) blur(25px);
+    }
+  </style>
+
+  <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+    <div class="row gx-lg-5 align-items-center mb-5">
+      <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+        <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
+          ML APP<br />
+          <span style="color: hsl(218, 81%, 75%)"> House Prediction</span>
+        </h1>
+        <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
+            
+        </p>
+      </div>
+
+      <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
+        <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+        <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+
+        <div class="card bg-glass">
+          <div class="card-body px-4 py-5 px-md-5">
+            <form id="predictForm">
+  <!-- Area input -->
+  <div class="mb-4">
+    <div data-mdb-input-init class="form-outline">
+      <input type="text" id="AreaInput" class="form-control" />
+      <label class="form-label" for="nameInput">Area</label>
+    </div>
+  </div>
+
+  <!-- Bedroom input -->
+  <div class="mb-4">
+    <div data-mdb-input-init class="form-outline">
+      <input type="number" id="BedroomInput" class="form-control" />
+      <label class="form-label" for="areaInput">Bedroom</label>
+    </div>
+  </div>
+
+  <!-- Bedroom input -->
+  <div class="mb-4">
+    <div data-mdb-input-init class="form-outline">
+      <input type="number" id="BathroomInput" class="form-control" />
+      <label class="form-label" for="bedroomInput">Bathrooms</label>
+    </div>
+  </div>
+
+  <!-- Checkbox (optional delete if not needed) -->
+  <div class="form-check d-flex justify-content-center mb-4">
+    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
+    <label class="form-check-label" for="form2Example33">
+      Subscribe to our newsletter
+    </label>
+  </div>
+
+  <!-- Submit button -->
+  <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">
+    Predict
+  </button>
+            </form>
+            
+<h4 id="result" class="text-center mt-3" style="color:rgb(0, 0, 0)"></h4>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Section: Design Block -->
+ <script>
+document.getElementById("predictForm").addEventListener("submit", async function(e){
+    e.preventDefault(); // stop form refresh
+
+    let area = document.getElementById("AreaInput").value;
+    let bedrooms = document.getElementById("BedroomInput").value;
+    let bathrooms = document.getElementById("BathroomInput").value;
+
+    const data = {
+        area: parseFloat(area),
+        bedrooms: parseInt(bedrooms),
+        bathrooms: parseInt(bathrooms)
+    };
+
+    try {
+        const response = await fetch("http://127.0.0.1:8000/predict", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(data)
+        });
+
+        const result = await response.json();
+
+        document.getElementById("result").innerText = 
+            "Predicted Price: ₹ " + result.predicted_price;
+    } catch (error) {
+        document.getElementById("result").innerText = 
+            "Error connecting to server!";
+    }
+});
 </script>
 
 </body>
