fixed home problms

--- a/car.html
+++ b/car.html
@@ -10,7 +10,7 @@
 <nav>
   <button class="toggle" onclick="toggleMode()">Dark Mode</button>
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="projects.html">Home</a></li>
     <li><a href="projects.html">Projects</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
