--- a/skills.html
+++ b/skills.html
@@ -10,7 +10,7 @@
 <nav>
     <button class="toggle" onclick="toggleMode()">Dark Mode</button>
     <ul>
-        <li><a href="projects.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="skills.html">Skills</a></li>
