--- a/projects.html
+++ b/projects.html
@@ -17,21 +17,28 @@
 <img src="images/wine.png" alt="Wine Quality Project Screenshot" />
 <h3>Wine Quality Prediction</h3>
 <p>Classification model with Streamlit UI.</p>
-<a href="https://github.com/yourusername/wine-quality">GitHub Repo</a>
+<a href="https://huggingface.co/spaces/YOUR_USERNAME/wine-quality-prediction" target="_blank">Live Demo</a> | <a href="https://github.com/yourusername/wine-quality">GitHub</a>
 </div>
-
 
 <div class="card">
 <img src="images/house.png" alt="House Price API Screenshot" />
-<h3>House Price Prediction API</h3>
-<p>FastAPI‑based ML REST service.</p>
-<a href="https://github.com/yourusername/house-price-api">GitHub Repo</a>
+<h3>House Price Prediction</h3>
+<p>ML regression model for predicting house prices.</p>
+<a href="https://huggingface.co/spaces/YOUR_USERNAME/house-price-prediction" target="_blank">Live Demo</a> | <a href="https://github.com/yourusername/house-price-api">GitHub</a>
 </div>
+
 <div class="card">
-<img src="images/shopping.png" alt="Shopping Cart Module" />
-<h3>Shopping Cart Module</h3>
-<p>Lightweight Python module demonstrating cart operations (add/remove, totals, discounts).</p>
-<a href="shopping_cart.py">View file</a>
+<img src="images/weather.png" alt="Weather Prediction" />
+<h3>Weather Prediction</h3>
+<p>Linear regression model for wind speed prediction.</p>
+<a href="https://huggingface.co/spaces/YOUR_USERNAME/weather-prediction" target="_blank">Live Demo</a> | <a href="https://github.com/yourusername/weather-prediction">GitHub</a>
+</div>
+
+<div class="card">
+<img src="images/shopping-cart.png" alt="Online Shopping Cart" />
+<h3>Online Shopping Cart (OOP)</h3>
+<p>Interactive shopping cart with object-oriented design.</p>
+<a href="https://huggingface.co/spaces/YOUR_USERNAME/onlineshoppingcart" target="_blank">Live Demo</a> | <a href="https://github.com/yourusername/onlineshoppingcart">GitHub</a>
 </div></div>
 </section>
 <footer>© 2025 Sidharth R</footer>
