--- a/projects.html
+++ b/projects.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Projects | Sidharth R</title>
-<link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Projects | Sidharth R</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<nav>...</nav>
-<section>
-<h2>Machine Learning Projects</h2>
+  <nav>
+    <strong>Sidharth R</strong>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="portfolio_pages/contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
+  <section style="max-width: 900px; margin: 100px auto; padding: 2rem;">
+    <h1>Machine Learning Projects</h1>
+    
+    <div class="grid">
+      <div class="card">
+        <h3>🍷 Wine Quality Prediction</h3>
+        <p>Classification model predicting wine quality from chemical properties (pH, alcohol, sulphates, etc.).</p>
+        <p><strong>Tech:</strong> Python, Scikit-learn, XGBoost, Streamlit</p>
+        <p><strong>Features:</strong></p>
+        <ul>
+          <li>Feature engineering & selection</li>
+          <li>Cross-validation & model comparison</li>
+          <li>Interactive Streamlit demo</li>
+          <li>~0.75 accuracy</li>
+        </ul>
+        <a href="https://huggingface.co/spaces/YOUR_USERNAME/wine-quality-prediction" target="_blank">Live Demo</a> | 
+        <a href="https://github.com/yourusername/wine-quality">GitHub Repo</a>
+      </div>
+    </div>
+  </section>
 
-<div class="grid">
-<div class="card">
-<img src="images/wine.png" alt="Wine Quality Project Screenshot" />
-<h3>Wine Quality Prediction</h3>
-<p>Classification model with Streamlit UI.</p>
-<a href="https://huggingface.co/spaces/YOUR_USERNAME/wine-quality-prediction" target="_blank">Live Demo</a> | <a href="https://github.com/yourusername/wine-quality">GitHub</a>
-</div>
-
-<div class="card">
-<img src="images/house.png" alt="House Price API Screenshot" />
-<h3>House Price Prediction</h3>
-<p>ML regression model for predicting house prices.</p>
-<a href="https://huggingface.co/spaces/YOUR_USERNAME/house-price-prediction" target="_blank">Live Demo</a> | <a href="https://github.com/yourusername/house-price-api">GitHub</a>
-</div>
-
-<div class="card">
-<img src="images/weather.png" alt="Weather Prediction" />
-<h3>Weather Prediction</h3>
-<p>Linear regression model for wind speed prediction.</p>
-<a href="https://huggingface.co/spaces/YOUR_USERNAME/weather-prediction" target="_blank">Live Demo</a> | <a href="https://github.com/yourusername/weather-prediction">GitHub</a>
-</div>
-
-<div class="card">
-<img src="images/shopping-cart.png" alt="Online Shopping Cart" />
-<h3>Online Shopping Cart (OOP)</h3>
-<p>Interactive shopping cart with object-oriented design.</p>
-<a href="https://huggingface.co/spaces/YOUR_USERNAME/onlineshoppingcart" target="_blank">Live Demo</a> | <a href="https://github.com/yourusername/onlineshoppingcart">GitHub</a>
-</div></div>
-</section>
-<footer>© 2025 Sidharth R</footer>
+  <footer>© 2025 Sidharth R | Machine Learning Engineer</footer>
+  <script src="script.js"></script>
 </body>
 </html>
